# pyprojectize

./: 2ping.spec  389-ds-base.spec  ATpy.spec  GeographicLib.spec  MUSIC.spec  Mayavi.spec  NFStest.spec  ProDy.spec  PyGreSQL.spec  PyMca.spec  PySolFC.spec  PyX.spec  README.md  ServiceReport.spec  TurboGears2.spec  academic-admin.spec  adapt.spec  adb-enhanced.spec  afflib.spec  aggregate6.spec  ampy.spec  ansible-bender.spec  apx.spec  arandr.spec  argparse-manpage.spec  artifacts.spec  atomic-reactor.spec  aubio.spec  autowrap.spec  azote.spec  b43-tools.spec  badchars.spec  barman.spec  battray.spec  binwalk.spec  bluechi.spec  boom-boot.spec  bpython.spec  breezy.spec  brotli.spec  (+1616 more)
.github/workflows/: release.yml  tox.yml
tests/: __all__.spec  add_pyproject_buildrequires.spec  add_pyproject_files.spec  egginfo_to_distinfo.spec  original.spec  py3_build_to_pyproject_wheel.spec  py3_install_to_pyproject_install.spec  py3_install_to_pyproject_install__add_pyproject_files.spec  py3_install_to_pyproject_install__add_pyproject_files__add_pyproject_check_import.spec  remove_pyp2rpm_comment.spec  remove_python_enable_dependency_generator.spec  remove_python_provide.spec  remove_remove_bundled_egginfo.spec  remove_setuptools_br.spec  test_modifiers.py  update_extras_subpkg.spec
