[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyprojectize"
dynamic = [
  "version",
]
description = "Converts a Fedora RPM spec file from %py3_build etc. to %pyproject macros"
license = "MIT-0"
authors = [
  { name="Miro HronÄok", email="miro@hroncok.cz" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "specfile",
  "packaging",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/hroncok/pyprojectize/"
Issues = "https://github.com/hroncok/pyprojectize/issues"

[project.scripts]
pyprojectize = "pyprojectize:main"

[tool.hatch.version]
source = "vcs"

[tool.tox]
requires = ["tox>=4.21"]
env_list = ["3.13", "3.12", "type", "black", "doc"]

[tool.tox.env_run_base]
description = "run test under {base_python}"
extras = ["test"]
commands = [["pytest", { replace = "posargs", default = ["-v"], extend = true }]]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy==1.11.2"]
commands = [["mypy", "pyprojectize.py"]]

[tool.tox.env.black]
description = "run black"
deps = ["black~=24.10"]
commands = [["black", "."]]

[tool.tox.env.doc]
description = "regenerate README"
deps = ["cogapp", "urllib3"]
commands = [["cog", "-Pr", "README.md"]]
